--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         </div>
                         <div class="g1">
                             <div class="my-pic" style="height: 317px;">	
-							<img src="images\ResumePic.png" class="img-rounded"/>
+							<img src="images\ResumePic.PNGlass="img-rounded"/>
                             </div>
                             <div class="sidebar">
                                 <h3>
@@ -222,7 +222,7 @@
                     <section class="clearfix">
                         <div class="g1">
                             <div class="image">
-                                <img src="images/dispatcher.png" alt="">
+                                <img src="images/Dispatcher.png" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="http://hatzloah.azurewebsites.net" class="btn" target="_blank">First Responder Disptach System</a>
