--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                         </div>
                         <div class="g1">
                             <div class="my-pic" style="height: 317px;">	
-							<img src="images\ResumePic.PNGlass="img-rounded"/>
+							<img src="images\ResumePic.PNG" class="img-rounded"/>
                             </div>
                             <div class="sidebar">
                                 <h3>
