--- a/index.html
+++ b/index.html
@@ -10,10 +10,6 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
   <link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-  <!--<link rel="apple-touch-icon-precomposed" href="apple-touch-icon-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-72x72-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-114x114-precomposed.png">
-  <link rel="apple-touch-icon-precomposed" href="apple-touch-icon-144x144-precomposed.png">-->
   <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
 
   <link rel="stylesheet" href="css/normalize.min.css">
@@ -22,12 +18,8 @@
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
   <script src="js/vendor/jquery.hashchange.min.js"></script>
   <script src="js/vendor/jquery.easytabs.min.js"></script>
-
   <script src="js/main.js"></script>
-  <!--[if lt IE 9]>
-      <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-      <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
-      <![endif]-->
+  
 </head>
   <body class="bg-fixed bg-1">
 <!--[if lt IE 7]>
@@ -66,76 +58,6 @@
             </ul>
           <!-- End Tab List -->
             <div id="tab-data-wrap">
-              <!-- About Tab Data -->
-                <!--<div id="about">
-                    <section class="clearfix">
-                        <div class="g2">
-                            <div class="photo">
-                                <img src="https://fbcdn-sphotos-e-a.akamaihd.net/hphotos-ak-frc1/582546_344156198979857_678123957_n.jpg" alt="Sunny Luthra">
-                            </div>
-                            <div class="info">
-                                <h2>
-                                    Steve Goldman
-                                </h2>
-                                <h3>
-                                    Software Developer
-                                </h3>
-                                <p>
-                                   I write code. The more I learn the more I realize how much I don't know. Copying and pasting is a skill :)
-                                </p>
-                            </div>
-                        </div>
-                        <div class="g1">
-                            <div class="main-links sidebar">
-                                <ul>
-                                    <li>
-                                        <a href="#resume">View My Resume</a>
-                                    </li>
-                                    <li>
-                                        <a href="#portfolio">My Portfolio</a>
-                                    </li>
-                                    <li>
-                                        <a href="#contact">Hire me for your next project</a>
-                                    </li>
-                                    <li>
-                                        <a href="#features">Features</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="break"></div>
-                        <div class="contact-info">
-                          <div class="g1">
-                            <div class="item-box clearfix">
-                              <i class="icon-envelope"></i>
-                              <div class="item-data">
-                                <h3><a href="mailto:sunny@mrova.com">sunny@mrova.com</a></h3>
-                                <p>Email Address</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="g1">
-                            <div class="item-box clearfix">
-                              <i class="icon-facebook"></i>
-                              <div class="item-data">
-                                <h3><a href="http://fb.me/luthra.sunny">luthra.sunny</a></h3>
-                                <p>Facebook Profile</p>
-                              </div>
-                            </div>
-                          </div>
-                          <div class="g1">
-                            <div class="item-box clearfix">
-                              <i class="icon-twitter"></i>
-                              <div class="item-data">
-                                <h3><a href="http://twitter.com/mRovaSolutions">@mRovaSolutions</a></h3>
-                                <p>Twitter Handle</p>
-                              </div>
-                            </div>
-                          </div>
-                        </div>
-                    </section><!-- content -->
-                <!--</div>-->
-              <!-- End About Tab Data -->
               <!-- Resume Tab Data -->
                 <div id="resume">
                     <section class="clearfix">
@@ -218,9 +140,9 @@
               <!-- End Resume Tab Data -->
               <!-- Portfolio Tab Data -->
                 <div id="portfolio">
-		          <h5>First Responder Disptach System</h5>
                     <section class="clearfix">
                         <div class="g1">
+						<h5 class="text-center">&nbsp; First Responder CAD &#x24B8;</h5>
                             <div class="image">
                                 <img src="images/dispatcher.png" alt="">
                                 <div class="image-overlay">
@@ -231,6 +153,7 @@
                             </div>
                         </div>
                         <div class="g1">
+						<h5 class="text-center">&nbsp; Shoe Purchase Tracker &#x24B8;</h5>
                             <div class="image">
                                 <img src="images/expensetracker2.jpg" alt="">
                                 <div class="image-overlay">
@@ -239,49 +162,18 @@
                                     </div>
                                 </div>
                             </div>
-                        </div>
- <!--                    <div class="g1">
+                        </div> 
+                        <div class="g1">
+						<h5 class="text-center">&nbsp; Open DNS Placeholder &#x24B8;</h5>
                             <div class="image">
-                                <img src="http://lorempixel.com/306/306/sports/3" alt="">
+                                <img src="images/fampic.jpg" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://lorempixel.com/606/606/sports/3" class="btn">Full View</a>
+                                        <a href="http://hatzloah.azurewebsites.net" class="btn" target="_blank">Open DNS Placeholder</a>
                                     </div>
                                 </div>
                             </div>
-                        </div>  -->
-                        <!-- <div class="break"></div> -->
-                        <!-- <div class="g1"> -->
-                            <!-- <div class="image"> -->
-                                <!-- <img src="http://lorempixel.com/306/306/sports/4" alt=""> -->
-                                <!-- <div class="image-overlay"> -->
-                                    <!-- <div class="image-link"> -->
-                                        <!-- <a href="http://lorempixel.com/606/606/sports/4" class="btn">Full View</a> -->
-                                    <!-- </div> -->
-                                <!-- </div> -->
-                            <!-- </div> -->
-                        <!-- </div> -->
-                        <!-- <div class="g1"> -->
-                            <!-- <div class="image"> -->
-                                <!-- <img src="http://lorempixel.com/306/306/sports/5" alt=""> -->
-                                <!-- <div class="image-overlay"> -->
-                                    <!-- <div class="image-link"> -->
-                                        <!-- <a href="http://lorempixel.com/606/606/sports/5" class="btn">Full View</a> -->
-                                    <!-- </div> -->
-                                <!-- </div> -->
-                            <!-- </div> -->
-                        <!-- </div> -->
-                        <!-- <div class="g1"> -->
-                            <!-- <div class="image"> -->
-                                <!-- <img src="http://lorempixel.com/306/306/business/2" alt=""> -->
-                                <!-- <div class="image-overlay"> -->
-                                    <!-- <div class="image-link"> -->
-                                        <!-- <a href="http://lorempixel.com/606/606/business/2" class="btn">Full View</a> -->
-                                    <!-- </div> -->
-                                <!-- </div> -->
-                            <!-- </div> -->
-                        <!-- </div> -->
-                        
+                        </div>						
                     </section>
                 </div>
               <!-- End Portfolio Data -->
@@ -329,15 +221,7 @@
             </div>
         </div>
         <!-- End Tab Container -->
-        <footer>
-            <p>
-                <!--Designed with lots of love at <a href="http://www.mrova.com" title="Pune web designing company">mRova</a>. Just <a href="http://www.mrova.com/free-one-page-responsive-html-resume-template/">Click me to download</a> this template for free :).-->
-            </p>
-        </footer>
     </div><!-- #main -->
 </div><!-- #main-container -->
-
-
-
 </body>
 </html>
