--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                         <div class="g1">
 						<h5 class="text-center">&nbsp; Open DNS Placeholder &#x24B8;</h5>
                             <div class="image">
-                                <img src="images/fampic.jpg" alt="">
+                                <img src="images/opendns.jpg" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
                                         <a href="http://hatzloah.azurewebsites.net" class="btn" target="_blank">Open DNS Placeholder</a>
