--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             </div>
                         </div> 
                         <div class="g1">
-						<h5 class="text-center">&nbsp; Open DNS Placeholder &#x24B8;</h5>
+						<h5 class="text-center">&nbsp; DNS Reporting (In Progress) &#x24B8;</h5>
                             <div class="image">
                                 <img src="images/opendns.jpg" alt="">
                                 <div class="image-overlay">
