--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                             </div>
                         </div>
                         <div class="g1">
-						<h5 class="text-center">&nbsp; Shoe Purchase Tracker &#x24B8;</h5>
+						<h5 class="text-center">&nbsp; Purchase Tracker &#x24B8;</h5>
                             <div class="image">
                                 <img src="images/expensetracker2.jpg" alt="">
                                 <div class="image-overlay">
