--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                                 <img src="images/opendns.jpg" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="http://hatzloah.azurewebsites.net" class="btn" target="_blank">Open DNS Placeholder</a>
+                                        <a href="" class="btn" target="_blank">Open DNS Placeholder</a>
                                     </div>
                                 </div>
                             </div>
