--- a/index.html
+++ b/index.html
@@ -1,11 +1,6 @@
-﻿<!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!DOCTYPE html>
 <head>
   <meta charset="utf-8">
-  <!--<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">-->
   <title>Steve Goldman</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width">
@@ -22,20 +17,17 @@
   
 </head>
   <body class="bg-fixed bg-1">
-<!--[if lt IE 7]>
-    <p class="chromeframe">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">activate Google Chrome Frame</a> to improve your experience.</p>
-    <![endif]-->
    <div class="main-container">
     <div class="main wrapper clearfix">
       <!-- Header Start -->
         <header id="header">
             <div id="logo">
+			   <div class="my-pic">	
+				<img src="images\ResumePic.PNG" class="img-rounded"/>
+			   </div>
                 <h2>
                     Steve Goldman
                 </h2>
-                <h4>
-                    Software Developer
-                </h4>
             </div>
         </header>
         <!-- Header End -->
@@ -43,9 +35,6 @@
         <div id="tab-container" class="tab-container">
           <!-- Tab List -->
             <ul class='etabs'>
-                <!--<li class='tab' id="tab-about">
-                  <a href="#about"><i class="icon-user"></i><span> About Me</span></a>
-                </li>-->
                 <li class='tab'>
                   <a href="#resume"><i class="icon-file-text"></i><span> Resume</span></a>
                 </li>
@@ -63,12 +52,13 @@
                     <section class="clearfix">
                         <div class="g2">
                             <h3>
-                                Work Experience
+							 .NET Developer                         
                             </h3>
+							<p><b>Experienced in:</b>&nbsp;C# | SQL Server | ASP.NET | JQuery | HTML/CSS | JavaScript | JSON | REST<p/>
                             <ul class="no-list work">
                                 <li>
                                     <h5>
-                                        Software Developer I
+                                        Software Developer - United Shore Financial
                                     </h5><span class="label label-info">Sept 2016 - Present</span>
                                         <p>Developed front-end and back-end applications in SQL, C#, JSON and JQuery.</p>
                                         <p>Greatly improved client experience by working as part of a team to create a new client facing web application with multiple new features that included several API calls.</p>
@@ -79,7 +69,7 @@
                                 </li>
                                 <li>
                                     <h5>
-                                        Teacher
+                                        Teacher - Farber Hebrew Academy
                                     </h5><span class="label label-info">Sept 2011- August 2016</span>
                                     <p>Effectively managed and organized classroom by using strategic solutions and thorough lesson planning.</p>
                                     <p>Observed coworkers through peer coaching programs and offered constructive criticism for best practices.</p>
@@ -111,9 +101,6 @@
                             </ul>
                         </div>
                         <div class="g1">
-                            <div class="my-pic" style="height: 317px;">	
-							<img src="images\ResumePic.PNG" class="img-rounded"/>
-                            </div>
                             <div class="sidebar">
                                 <h3>
                                     Skills
@@ -183,22 +170,11 @@
                        <div class="g1">
                          <div class="sny-icon-box">
                            <div class="sny-icon">
-                              <i class="icon-globe"></i>
-                            </div>
-                            <div class="sny-icon-content">
-                              <h4>My Address</h4>
-                              <p>Some Apartment 405 in a jungle nearby a restaurant</p>
-                            </div>
-                         </div>
-                       </div>
-                       <div class="g1">
-                         <div class="sny-icon-box">
-                           <div class="sny-icon">
                               <i class="icon-phone"></i>
                             </div>
                             <div class="sny-icon-content">
                               <h4>Mobile Number</h4>
-                              <p>999-9999-999<br/>999-1112-999</p>
+                              <p>248-291-4191</p>
                             </div>
                          </div>
                        </div>
@@ -208,13 +184,12 @@
                               <i class="icon-user"></i>
                             </div>
                             <div class="sny-icon-content">
-                              <h4>About Me</h4>
-                              <p>I love to work, so don't be shy, i am just an email away.</p>
+                              <h4>Email</h4>
+                              <p>steve2goldman@gmail.com</p>
                             </div>
                          </div>
                        </div>
                        <div class="break"></div>
-                       
                     </section>
                 </div>
               <!-- End Contact Data -->
