Updated some pointers

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/main.css">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.10.1.min.js"><\/script>')</script>
-  <script src="js/vendor/jquery.hashchange.min.js"></script>
+  <!-- <script src="js/vendor/jquery.hashchange.min.js"></script> -->
   <script src="js/vendor/jquery.easytabs.min.js"></script>
   <script src="js/main.js"></script>
   
@@ -60,7 +60,7 @@
                                     <h5>
                                         Software Developer - United Shore Financial
                                     </h5><span class="label label-info">Sept 2016 - Present</span>
-                                        <p>Developed front-end and back-end applications in SQL, C#, JSON and JQuery.</p>
+                                        <p>Developed front-end and back-end applications in SQL, C#, JSON, and JQuery.</p>
                                         <p>Greatly improved client experience by working as part of a team to create a new client facing web application with multiple new features that included several API calls.</p>
                                         <p>Assisted Data Services to write and debug complex queries for client statistics.</p>
                                         <p>Enhanced project build time by creating a new Unit Test framework to be used for Controllers and Http tests.</p>
@@ -87,7 +87,7 @@
                                         Grand Circus Coding Bootcamp
                                     </h5><span class="label label-success">June 2016- August 2016</span>
                                     <p>
-                                        10-week intensive Java course of fast paced learning through classroom lectures, code challenges, labs and group projects. 
+                                        10-week intensive Java course. Fast-paced learning through classroom lectures, code challenges, labs and group projects. 
                                     </p>
                                 </li>
                                 <li>
