--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                     <h5>
                                         Software Developer - United Shore Financial
                                     </h5><span class="label label-info">Sept 2016 - Present</span>
-                                        <p>Developed front-end and back-end applications in SQL, C#, JSON, and JQuery.</p>
+                                        <ul><p>Developed front-end and back-end applications in SQL, C#, JSON, and JQuery.</p></ul>
                                         <p>Part of a team (and project lead on some components) that developed a new product website for UWM.com which included writing and calling API’s.</p>
                                         <p>Created Home Value Estimator widget app for UWM.com using full stack .NET, JS, JQuery, Html, CSS technologies </p>
 					<p>Assisted Data Services in rewriting complex stored procedures for client statistics and pipeline data</p>
