--- a/index.html
+++ b/index.html
@@ -60,13 +60,15 @@
                                     <h5>
                                         Software Developer - United Shore Financial
                                     </h5><span class="label label-info">Sept 2016 - Present</span>
-                                        <ul><p>Developed front-end and back-end applications in SQL, C#, JSON, and JQuery.</p></ul>
+					<ul>
+                                        <li><p>Developed front-end and back-end applications in SQL, C#, JSON, and JQuery.</p></li>
                                         <p>Part of a team (and project lead on some components) that developed a new product website for UWM.com which included writing and calling API’s.</p>
                                         <p>Created Home Value Estimator widget app for UWM.com using full stack .NET, JS, JQuery, Html, CSS technologies </p>
 					<p>Assisted Data Services in rewriting complex stored procedures for client statistics and pipeline data</p>
                                         <p>Enhanced project build time by creating a new Unit Test framework to be used for Controllers and Http tests.</p>
                                         <p>Worked with Business Analyst, Product Owners and Developers in an Agile environment to develop applications based on  project requirements.</p>
                                         <p>Coordinated with QA's to test and debug software applications.</p>
+					</ul>
                                 </li>
                                 <li>
                                     <h5>
