--- a/index.html
+++ b/index.html
@@ -56,16 +56,24 @@
                             </h3>
 							<p><b>Experienced in:</b>&nbsp;C# | SQL Server | ASP.NET | JQuery | HTML/CSS | JavaScript | JSON | REST<p/>
                             <ul class="no-list work">
+				 <li>
+                                    <h5>
+                                        Software Engineer  - Meridian
+                                    </h5><span class="label label-info">November 2018 - Present</span>
+                                        <p>Review, analyze, construct, and modify business application systems including coding, testing, debugging, and deployment.</p>
+                                        <p>Understanding business and technical requirements; develop, document, and implement solution designs.</p>
+                                        <p>Work with other developers, architects, engineers, database administrators, business analysts, QA, and delivery leads in project delivery and solving technical issues.</p>
+                                </li>
                                 <li>
                                     <h5>
                                         Software Developer - United Shore Financial
-                                    </h5><span class="label label-info">Sept 2016 - Present</span>
+                                    </h5><span class="label label-info">Sept 2016 - November 2018</span>
                                         <p>Developed front-end and back-end applications in SQL, C#, JSON, and JQuery.</p>
-                                        <p>Part of a team (and project lead on some components) that developed a new product website for UWM.com which included writing and calling API’s.</p>
-                                        <p>Created Home Value Estimator widget app for UWM.com using full stack .NET, JS, JQuery, Html, CSS technologies </p>
+                                        <p>Developed a new product website as part of a team (and project lead on some components) for UWM.com which included writing and calling API’s</p>
+                                        <p>Created Home Value Estimator widget app for UWM.com using Web API and full stack .NET, JS, JQuery, Html, CSS technologies</p>
 					<p>Assisted Data Services in rewriting complex stored procedures for client statistics and pipeline data</p>
-                                        <p>Enhanced project build time by creating a new Unit Test framework to be used for Controllers and Http tests.</p>
-                                        <p>Worked with Business Analyst, Product Owners and Developers in an Agile environment to develop applications based on  project requirements.</p>
+                                        <p>Reduced project build time by creating a new Unit Test framework to be used for Controllers and Http tests.</p>
+                                        <p>Created a WPF Desktop Application for the team to track and deploy projects to various sandbox environments for testing purposes</p>
                                         <p>Coordinated with QA's to test and debug software applications.</p>
                                 </li>
                                 <li>
