--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@
                                     <h5>
                                         Software Engineer  - Meridian
                                     </h5><span class="label label-info">November 2018 - Present</span>
-                                        <p>Review, analyze, construct, and modify business application systems including coding, testing, debugging, and deployment.</p>
-                                        <p>Understanding business and technical requirements; develop, document, and implement solution designs.</p>
-                                        <p>Work with other developers, architects, engineers, database administrators, business analysts, QA, and delivery leads in project delivery and solving technical issues.</p>
+                                        <p>Developed a dashboard using MVC and Surround SCM/Helix API that integrated project issues/defects with its related change lists</p>
+                                        <p>Created a WPF app to launch local Node server for UI development</p>
+                                        <p>Modified and created SSRS reports and accompanying stored procedures.</p>
+					<p>Created, modified, and fixed reports written in legacy Progress/OpenEdge language to provide historical and current medical health data to internal users</p>
                                 </li>
                                 <li>
                                     <h5>
