Added router report project

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                                 <img src="images/opendns.jpg" alt="">
                                 <div class="image-overlay">
                                     <div class="image-link">
-                                        <a href="" class="btn" target="_blank">Open DNS Placeholder</a>
+                                        <a href="https://routerreport.azurewebsites.net/" class="btn" target="_blank">Router Filter Reports</a>
                                     </div>
                                 </div>
                             </div>
