--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                             </div>
                         </div> 
                         <div class="g1">
-						<h5 class="text-center">&nbsp; DNS Reporting</h5>
+						<h5 class="text-center">&nbsp;Open DNS Reporting</h5>
                             <div class="image">
                                 <img src="images/opendns.jpg" alt="">
                                 <div class="image-overlay">
