--- a/index.html
+++ b/index.html
@@ -56,10 +56,15 @@
                             </h3>
 							<p><b>Experienced in:</b>&nbsp;C# | SQL Server | ASP.NET | JQuery | HTML/CSS | JavaScript | JSON | REST<p/>
                             <ul class="no-list work">
+			        <li>
+                                    <h5>
+                                        Full Stack Developer - Jato Dynamics
+                                    </h5><span class="label label-info">May 2019 - Present</span>
+                                </li>
 				 <li>
                                     <h5>
                                         Software Engineer  - Meridian
-                                    </h5><span class="label label-info">November 2018 - Present</span>
+                                    </h5><span class="label label-info">November 2018 - May 2019</span>
                                         <p>Developed a dashboard using MVC and Surround SCM/Helix API that integrated project issues/defects with its related change lists</p>
                                         <p>Created a WPF app to launch local Node server for UI development</p>
                                         <p>Modified and created SSRS reports and accompanying stored procedures.</p>
