--- a/index.html
+++ b/index.html
@@ -60,6 +60,11 @@
                                     <h5>
                                         Full Stack Developer - Jato Dynamics
                                     </h5><span class="label label-info">May 2019 - Present</span>
+					<p>More to come</p>
+					</br>
+					</br>
+					</br>
+					</br>
                                 </li>
 				 <li>
                                     <h5>
