--- a/index.html
+++ b/index.html
@@ -129,16 +129,22 @@
                                     <span style="width: 85.3%"><span>HTML/CSS</span></span>
                                 </div>
                                 <div class="meter carrot">
-                                    <span style="width: 60%"><span>SQL Server</span></span>
+                                    <span style="width: 65%"><span>SQL Server</span></span>
                                 </div>
                                 <div class="meter wisteria">
-                                    <span style="width: 70%"><span>jQuery</span></span>
+                                    <span style="width: 85%"><span>jQuery</span></span>
                                 </div>
                                 <div class="meter sunflower">
                                     <span style="width: 85%"><span>C#</span></span>
                                 </div>
                                 <div class="meter asbestos">
-                                    <span style="width: 50%"><span>Javascript</span></span>
+                                    <span style="width: 60%"><span>Javascript</span></span>
+                                </div>
+			        <div class="meter asbestos">
+                                    <span style="width: 50%"><span>Azure</span></span>
+                                </div>
+				<div class="meter asbestos">
+                                    <span style="width: 37%"><span>Xamarin</span></span>
                                 </div>
                             </div>
                         </div>
