--- a/index.html
+++ b/index.html
@@ -140,10 +140,10 @@
                                 <div class="meter asbestos">
                                     <span style="width: 60%"><span>Javascript</span></span>
                                 </div>
-			        <div class="meter asbestos">
+			        <div class="meter emerald">
                                     <span style="width: 50%"><span>Azure</span></span>
                                 </div>
-				<div class="meter asbestos">
+				<div class="meter carrot">
                                     <span style="width: 37%"><span>Xamarin</span></span>
                                 </div>
                             </div>
