--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
 					</br>
                                 </li>
 				 <li>
+									 <h5>
+                                        Full Stack Developer  - JATO Dynamics North America
+                                    </h5><span class="label label-info">May 2019 - Present</span>
+                                        <p>Developed an API Gateway solution for internal users to access foundation data (ASP.NET Core, Azure Functions, Azure Cognitive Search, Generics, DI)</p>
+                                        <p>Created main infrastructure and design pattern for developers to utilize the same code base for multiple different API Gateway usages</p>
+                                        <p>Integrated WLTP API Application to work with many different Oem API's and various JSON data structures to get WLTP values for all vehicles</p>
+										<p>Mentored Junior Developers in implementing their solutions, bug fixes, and general .NET, C# knowledge</p>
+										<p>Created an ASP.NET Core application to test WLTP API using Azure AD, App Insights Logs, Cosmos DB</p>
+                                </li>
                                     <h5>
                                         Software Engineer  - Meridian
                                     </h5><span class="label label-info">November 2018 - May 2019</span>
