--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 							<p><b>Experienced in:</b>&nbsp;C# | SQL Server | ASP.NET | JQuery | HTML/CSS | JavaScript | JSON | REST<p/>
                             <ul class="no-list work">
 				 <li>
-									 <h5>
-                                        Full Stack Developer  - JATO Dynamics North America
+				    <h5>
+                                        Full Stack Developer  - JATO Dynamics
                                     </h5><span class="label label-info">May 2019 - Present</span>
                                         <p>Developed an API Gateway solution for internal users to access foundation data (ASP.NET Core, Azure Functions, Azure Cognitive Search, Generics, DI)</p>
                                         <p>Created main infrastructure and design pattern for developers to utilize the same code base for multiple different API Gateway usages</p>
