--- a/index.html
+++ b/index.html
@@ -60,11 +60,10 @@
 				    <h5>
                                         Full Stack Developer  - JATO Dynamics
                                     </h5><span class="label label-info">May 2019 - Present</span>
-                                        <p>Developed an API Gateway solution for internal users to access foundation data (ASP.NET Core, Azure Functions, Azure Cognitive Search, Generics, DI)</p>
-                                        <p>Created main infrastructure and design pattern for developers to utilize the same code base for multiple different API Gateway usages</p>
-                                        <p>Integrated WLTP API Application to work with many different Oem API's and various JSON data structures to get WLTP values for all vehicles</p>
-										<p>Mentored Junior Developers in implementing their solutions, bug fixes, and general .NET, C# knowledge</p>
-										<p>Created an ASP.NET Core application to test WLTP API using Azure AD, App Insights Logs, Cosmos DB</p>
+                                        <p>Developed an API using Azure Functions to expose previously inaccessible legacy data to key stakeholders</p>
+                                        <p>Designed and implemented a solution by creating a suite of generic classes to enable developers to rapidly implement search APIs for a variety of JATO's data points</p>
+                                        <p>Integrated a variety of JSON schemas from multiple vehicle manufacturer APIs to provide vehicle emissions data to external clients in a normalized format</p>
+					<p>Mentored Junior Developers in implementing their solutions, bug fixes, and general .NET, C# knowledge</p>
                                 </li>
 				<li>
                                     <h5>
