--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <ul class="no-list work">
 				 <li>
 				    <h5>
-                                        Full Stack Developer  - JATO Dynamics
+                                        Full Stacks Developer  - JATO Dynamics
                                     </h5><span class="label label-info">May 2019 - Present</span>
                                         <p>Developed an API using Azure Functions to expose previously inaccessible legacy data to key stakeholders</p>
                                         <p>Designed and implemented a solution by creating a suite of generic classes to enable developers to rapidly implement search APIs for a variety of JATO's data points</p>
