--- a/index.html
+++ b/index.html
@@ -58,8 +58,16 @@
                             <ul class="no-list work">
 				 <li>
 				    <h5>
+                                        Software Engineer  - Nexsys Technologies
+                                    </h5><span class="label label-info">August 2020 - Present</span>
+                                        <p>Created system to normalize multiple external API schemas from various home insurance companies</p>
+                                        <p>Developed an Angular 12 application to allow lenders to search for and purchase proof of homeowners insurance</p>
+                                        <p>Produced a Blazor application to enable real-time percentage results through executing thousands of API requests against our product</p>
+                                </li>
+				 <li>
+				    <h5>
                                         Full Stack Developer  - JATO Dynamics
-                                    </h5><span class="label label-info">May 2019 - Present</span>
+                                    </h5><span class="label label-info">May 2019 - August 2020</span>
                                         <p>Developed an API using Azure Functions to expose previously inaccessible legacy data to key stakeholders</p>
                                         <p>Designed and implemented a solution by creating a suite of generic classes to enable developers to rapidly implement search APIs for a variety of JATO's data points</p>
                                         <p>Integrated a variety of JSON schemas from multiple vehicle manufacturer APIs to provide vehicle emissions data to external clients in a normalized format</p>
