--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                                     Skills
                                 </h3>
                                 <div class="meter emerald">
-                                    <span style="width: 85.3%"><span>HTML/CSS</span></span>
+                                    <span style="width: 90%"><span>HTML/CSS</span></span>
                                 </div>
                                 <div class="meter carrot">
                                     <span style="width: 65%"><span>SQL Server</span></span>
@@ -144,11 +144,17 @@
                                 <div class="meter sunflower">
                                     <span style="width: 85%"><span>C#</span></span>
                                 </div>
+			        <div class="meter carrot">
+                                    <span style="width: 60%"><span>Angular</span></span>
+                                </div>
                                 <div class="meter asbestos">
                                     <span style="width: 60%"><span>Javascript</span></span>
                                 </div>
 			        <div class="meter emerald">
-                                    <span style="width: 60%"><span>Azure</span></span>
+                                    <span style="width: 87%"><span>Azure</span></span>
+                                </div>
+			        <div class="meter wisteria">
+                                    <span style="width: 92%"><span>Azure Dev Ops</span></span>
                                 </div>
 				<div class="meter carrot">
                                     <span style="width: 37%"><span>Xamarin</span></span>
