--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
                             </div>
                             <div class="sny-icon-content">
                               <h4>Email</h4>
-                              <p>steve2goldman@gmail.com</p>
+                              <p>sgoldman@goldmandevelopment.com</p>
                             </div>
                          </div>
                        </div>
