--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                 </div>
               <!-- End Portfolio Data -->
               <!-- Contact Tab Data -->
-                <div id="contact">
+                <div id="contact" style="marging-left: 199px;">
                     <section class="clearfix">
                        <div class="g1">
                          <div class="sny-icon-box">
@@ -228,7 +228,7 @@
                             </div>
                          </div>
                        </div>
-                       <div class="g1">
+                       <div class="g1" style="margin-left: 57px;">
                          <div class="sny-icon-box">
                            <div class="sny-icon">
                               <i class="icon-user"></i>
