--- a/index.html
+++ b/index.html
@@ -56,10 +56,18 @@
                             </h3>
 							<p><b>Experienced in:</b>&nbsp;C# | SQL Server | .NET/ASP.NET Core - .NET/ASP.NET 6 | Angular | Azure | Azure Dev Ops | JQuery | HTML/CSS | JavaScript | JSON | REST<p/>
                             <ul class="no-list work">
+			        <li>
+				    <h5>
+                                        Software Engineer  - Flex N Gate
+                                    </h5><span class="label label-info">November 2022 - Present</span>
+                                        <p>Successfully addressed a critical performance issue by rewriting a large legacy query that was causing significant delays and frequent timeouts on the front end. The optimization efforts resulted in a remarkable 63% improvement in query speed</p>
+                                        <p>Played a key role in the development and maintenance of multiple .NET 5 applications aimed at providing plant managers with a comprehensive overview of machine statuses, data points, and performance metrics</p>
+                                        <p>Actively contributed to day-to-day bug fixing, promptly identifying, and resolving issues to ensure the smooth operation of the applications</p>
+                                </li>
 				 <li>
 				    <h5>
                                         Software Engineer  - Nexsys Technologies
-                                    </h5><span class="label label-info">August 2020 - Present</span>
+                                    </h5><span class="label label-info">August 2020 - November 2022</span>
                                         <p>Created system to normalize multiple external API schemas from various home insurance companies</p>
                                         <p>Developed an Angular 12 application to allow lenders to search for and purchase proof of homeowners insurance</p>
                                         <p>Produced a Blazor application to enable real-time percentage results through executing thousands of API requests against our product</p>
